--- a/index.html
+++ b/index.html
@@ -37,45 +37,34 @@
 					<li><label for="fname">Name</label></li>
 					<li><input id="fname" name="fname" placeholder="Name of Service/Facility" required="" size="40" type="text"></li>
 					<li><label for="doctor">Doctor</label></li>
-					<li>
-					<textarea cols="40" id="doctor" name="doctor" placeholder="Who should we look for?" rows="5"></textarea></li>
+					<li><textarea cols="40" id="doctor" name="doctor" placeholder="Who should we look for?" rows="5"></textarea></li>
 					<li><label for="address">Address</label></li>
-					<li>
-					<textarea cols="40" id="address" name="address" placeholder="Where can we find this?" rows="5"></textarea></li>
+					<li><textarea cols="40" id="address" name="address" placeholder="Where can we find this?" rows="5"></textarea></li>
 					<li><label for="contactnum">Contact Number</label></li>
 					<li><input id="contactnum" name="contactnum" placeholder="Telephone or Mobile number to call" required="" size="40" type="text"></li>
 					<li><label for="fee">Initial and Succeeding Fees</label></li>
 					<li><input id="fee" name="fee" placeholder="Separate by comma if succeeding fees are diff. from initial" size="40" type="text"></li>
 					<li><label for="website">Website or Other Details</label></li>
-					<li>
-					<textarea cols="40" id="website" name="website" placeholder="Website, Social Media, other details" rows="5"></textarea></li>
+					<li><textarea cols="40" id="website" name="website" placeholder="Website, Social Media, other details" rows="5"></textarea></li>
 					<li><label for="hours">Opening Hours</label></li>
 					<li><input id="hours" name="hours" placeholder="Opening Hours" size="40" type="text"></li>
 					<li><label for="notes">Notes/Recommendations</label></li>
-					<li>
-					<textarea cols="40" id="notes" name="notes" placeholder="Notes/tips for others" rows="5"></textarea></li>
+					<li><textarea cols="40" id="notes" name="notes" placeholder="Notes/tips for others" rows="5"></textarea></li>
 				</ul><input style="position:absolute; top:-1000px" tabindex="-1" type="submit">
 			</fieldset>
 		</form>
 	</div>
-	<script src="https://unpkg.com/leaflet@0.7.7/dist/leaflet.js">
-	</script> 
-	<script src="//cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js">
-	</script> 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js">
-	</script> 
-	<script src="https://rawgit.com/k4r573n/leaflet-control-osm-geocoder/master/Control.OSMGeocoder.js">
-	</script> 
-	<script src="//code.jquery.com/ui/1.12.1/jquery-ui.js">
-	</script> 
-	<script src="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	</script> 
-	<script charset="utf-8" src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.67.0/dist/L.Control.Locate.min.js">
-	</script> 
-	<script src="https://rawgit.com/mapshakers/leaflet-control-window/master/src/L.Control.Window.js">
-	</script> 
-	<script src="http://leaflet.github.io/Leaflet.markercluster/dist/leaflet.markercluster-src.js">
-	</script> 
+	<script src="https://unpkg.com/leaflet@0.7.7/dist/leaflet.js"></script> 
+	<script src="//cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js"></script> 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> 
+	<script src="https://rawgit.com/k4r573n/leaflet-control-osm-geocoder/master/Control.OSMGeocoder.js"></script> 
+	<script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script> 
+	<script src="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"></script> 
+	<script charset="utf-8" src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.67.0/dist/L.Control.Locate.min.js"></script> 
+	<script src="https://rawgit.com/mapshakers/leaflet-control-window/master/src/L.Control.Window.js"></script> 
+	<script src="http://leaflet.github.io/Leaflet.markercluster/dist/leaflet.markercluster-src.js"></script> 
+	
+	
 	<script>
 
 	          var config = { //TODO: Change to your username, insert function on Carto, and Carto tablename
