--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 	                  }).addTo(map);
 			     
 	                  var clusters = L.markerClusterGroup();
+	                  clusters.addLayer(cartoData);			      
 	                  map.addLayer(clusters);			      			   
 	              });
 	          }
