--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 	              dialog.dialog("open");
 
 	              var clusters = L.markerClusterGroup();			  
-	              clusters.addLayer(cartoData(getRandomLatLng(map)));	
+	              clusters.addLayer(layer(getRandomLatLng(map)));	
 	              map.addLayer(clusters);		      		  
 			  
 	          });
