--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	<link href="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.67.0/dist/L.Control.Locate.min.css" rel="stylesheet">
 	<link href="https://rawgit.com/mapshakers/leaflet-control-window/master/src/L.Control.Window.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://github.com/anditabinas/mhawhereness/blob/master/css/MarkerCluster.css" />	
-	<link rel="stylesheet" href="leaflet-easy-button.css" />
-	<link rel="stylesheet" href="leaflet-tag-filter-button.css" />
+	<link rel="stylesheet" href="https://github.com/anditabinas/mhawhereness/blob/master/leaflet-easy-button.css" />
+	<link rel="stylesheet" href="https://github.com/anditabinas/mhawhereness/blob/master/leaflet-tag-filter-button.css" />
 
 
 </head>
@@ -66,8 +66,8 @@
 	<script charset="utf-8" src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.67.0/dist/L.Control.Locate.min.js"></script> 
 	<script src="https://rawgit.com/mapshakers/leaflet-control-window/master/src/L.Control.Window.js"></script> 
 	<script src="leaflet.markercluster.js"></script>
-	<script src="leaflet-easy-button.js"></script>
-	<script src="leaflet-tag-filter-button.js"></script>
+	<script src="https://github.com/anditabinas/mhawhereness/blob/master/leaflet-easy-button.js"></script>
+	<script src="https://github.com/anditabinas/mhawhereness/blob/master/leaflet-tag-filter-button.js"></script>
 	
 	
 	<script>
@@ -124,7 +124,6 @@
 	          }).addTo(zoomTo);  	         
 
 	         
-
 	          var getData = "https://" + config.cartoUsername + ".carto.com/api/v2/sql?format=GeoJSON&q=" + sqlQuery; //Fetches data input on the carto database
 	          function getGeoJSON() {
 	              $.getJSON(getData, function (data) {
