--- a/index.html
+++ b/index.html
@@ -117,7 +117,10 @@
 	                      onEachFeature: function (feature, layer) {
 	                          layer.bindPopup('<b>Name: <\/b>' + feature.properties.name + '<br>' + '<b>Doctor: <\/b>' + feature.properties.doctor + '<br>' + '<b>Address: <\/b>' + feature.properties.address + '<br>' + '<b>Contact Number: <\/b>' + feature.properties.contactnum + '<br>' + '<b>Fees (Initial/Succeeding): <\/b>' + feature.properties.fee + '<br>' + '<b>Website: <\/b>' + feature.properties.website + '<br>' + '<b>Opening Hours: <\/b>' + feature.properties.hours + '<br>' + '<b>Notes/Recommendations: <\/b>' + feature.properties.notes + '');
 	                      }           
-	                  }).addTo(map);			      			   
+	                  }).addTo(map);
+	                  var clusters = L.markerCluserGroup();			      
+	                  clusters.addLayer(cartoData);
+	                  map.addLayer(clusters);
 	              });
 	          }
 	          getGeoJSON();
