--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 	                      }           
 	                  }).addTo(map);
 	                  var clusters = L.markerCluserGroup();			      
-	                  clusters.addLayer(cartoData);
+	                  clusters.addLayer(drawnItems);
 	                  map.addLayer(clusters);
 	              });
 	          }
