--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 			<fieldset style="border: none;">
 				<ul style="list-style-type: none; padding-left: 0px">
 					<li><label for="fname">Name</label></li>
-					<li><input id="fname" name="fname" placeholder="Name of Service/Facility" required="" size="40" type="text"></li>
+					<li><input id="fname" name="fname" placeholder="Name of Service/Facility" size="40" type="text" required></li>
 					<li><label for="doctor">Doctor</label></li>
 					<li><textarea cols="40" id="doctor" name="doctor" placeholder="Who should we look for?" rows="5"></textarea></li>
 					<li><label for="address">Address</label></li>
 					<li><textarea cols="40" id="address" name="address" placeholder="Where can we find this?" rows="5"></textarea></li>
 					<li><label for="contactnum">Contact Number</label></li>
-					<li><input id="contactnum" name="contactnum" placeholder="Telephone or Mobile number to call" required="" size="40" type="text"></li>
+					<li><input id="contactnum" name="contactnum" placeholder="Telephone or Mobile number to call" size="40" type="text" required></li>
 					<li><label for="fee">Initial and Succeeding Fees</label></li>
 					<li><input id="fee" name="fee" placeholder="Separate by comma if succeeding fees are diff. from initial" size="40" type="text"></li>
 					<li><label for="website">Website or Other Details</label></li>
