--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 		<div id="credits">
 			<p>Github Leaflet Draw Collection Tool &copy;2015, Mike Foster and Raphael Dumas</p>
 			<p>Mental Health aWHEREness &copy;2019, Sandra Tabinas</p>
-			<a href="https://mentalhealthawhereness.com"><img src="https://mhaphmap.files.wordpress.com/2019/05/mhaphlogo-1.png" alt="Mental Health aWHEREness" style="width:50px; height:40px; border:0; align:right"></a>
+		</div>
+		<div class=text-right"><a href="https://mentalhealthawhereness.com"><img src="https://mhaphmap.files.wordpress.com/2019/05/mhaphlogo-1.png" alt="Mental Health aWHEREness" style="width:50px; height:40px; border:0; align:right"><a>
 		</div>
 	</div>
 	<div id="dialog" title="MH Service/Facility Details">
