--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 		<div id="credits">
 			<p>Github Leaflet Draw Collection Tool &copy;2015, Mike Foster and Raphael Dumas</p>
 			<p>Mental Health aWHEREness &copy;2019, Sandra Tabinas</p>
-			<p><a href="https://mentalhealthawhereness.com"><img src="https://mhaphmap.files.wordpress.com/2019/05/mhaphlogo-1.png" alt="Mental Health aWHEREness" style="width:40px; height:30px; border:0"></a></p>
 		</div>
+		<p>For further information on the Mental Health aWHEREness Project, please visit https://mentalhealthawhereness.com.</p>
+		<div style="width:100%;text-align:right;"><a href="https://mentalhealthawhereness.com"><img src="https://mhaphmap.files.wordpress.com/2019/05/mhaphlogo-1.png" alt="Mental Health aWHEREness" style="width:50px; height:40px; border:0; align:right"></div>
 	</div>
 	<div id="dialog" title="MH Service/Facility Details">
 		<form>
