--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<p>Github Leaflet Draw Collection Tool &copy;2015, Mike Foster and Raphael Dumas</p>
 			<p>Mental Health aWHEREness &copy;2019, Sandra Tabinas</p>
 		</div>
-		For further information on the Mental Health aWHEREness Project, please visit https://mentalhealthawhereness.com. <a href="https://mentalhealthawhereness.com"><img src="https://mhaphmap.files.wordpress.com/2019/05/mhaphlogo-1.png" alt="Mental Health aWHEREness" style="width:50px; height:40px; border:0; align:right">
+		<a href="https://mentalhealthawhereness.com"><img src="https://mhaphmap.files.wordpress.com/2019/05/mhaphlogo-1.png" alt="Mental Health aWHEREness" style="width:50px; height:40px; border:0"> For further information on the Mental Health aWHEREness Project, please visit https://mentalhealthawhereness.com.
 	</div>
 	<div id="dialog" title="MH Service/Facility Details">
 		<form>
