--- a/index.html
+++ b/index.html
@@ -27,14 +27,13 @@
 			<h1>Mental Health aWHEREness</h1>
 		</div>
 		<div id="controls">
-			<b>Click points for more information, or add your own.</b> <input onclick="startEdits()" type="button" value="Click to Start Editing"> <input onclick="stopEdits()" type="button" value="Stop Your Editing Session"><br>
+			<b>Click points for more information, or add your own.</b> <input onclick="startEdits()" type="button" value="Click to Start Editing"> <input onclick="stopEdits()" type="button" value="Stop Your Editing Session"><br> <img src="https://mhaphmap.files.wordpress.com/2019/05/mhaphlogo-1.png" alt="Mental Health aWHEREness" style="width:50px; height:40px; border:0"></a>
 		</div>
 		<div id="map"></div>
 		<div id="credits">
 			<p>Github Leaflet Draw Collection Tool &copy;2015, Mike Foster and Raphael Dumas</p>
 			<p>Mental Health aWHEREness &copy;2019, Sandra Tabinas</p>
 		</div>
-		<footer><small>For further information on the Mental Health aWHEREness Project, please visit https://mentalhealthawhereness.com.<a href="https://mentalhealthawhereness.com"><img src="https://mhaphmap.files.wordpress.com/2019/05/mhaphlogo-1.png" alt="Mental Health aWHEREness" style="width:50px; height:40px; border:0"></a></small></footer>
 	</div>
 	<div id="dialog" title="MH Service/Facility Details">
 		<form>
