--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 <body>
 	<div id="wrapper">
 		<div id="header">
-			<h1>Mental Health aWHEREness</h1>
+			<img src="https://mhaphmap.files.wordpress.com/2019/05/mhaphlogo-1.png" alt="Mental Health aWHEREness" style="width:50px; height:40px; border:0"><h1>Mental Health aWHEREness</h1>
 		</div>
 		<div id="controls">
-			<b>Click points for more information, or add your own.</b> <input onclick="startEdits()" type="button" value="Click to Start Editing"> <input onclick="stopEdits()" type="button" value="Stop Your Editing Session"><br> <img src="https://mhaphmap.files.wordpress.com/2019/05/mhaphlogo-1.png" alt="Mental Health aWHEREness" style="width:50px; height:40px; border:0"></a>
+			<b>Click points for more information, or add your own.</b> <input onclick="startEdits()" type="button" value="Click to Start Editing"> <input onclick="stopEdits()" type="button" value="Stop Your Editing Session"><br>
 		</div>
 		<div id="map"></div>
 		<div id="credits">
