--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 </head>
 <body>
+	<body oncontextmenu="return false">
 	<div id="wrapper">
 		<div id="header">
 			<a href="https://mentalhealthawhereness.com"><img src="https://mhaphmap.files.wordpress.com/2019/05/mhaphlogo-1.png" alt="Mental Health aWHEREness" style="width:50px; height:40px; border:0"></a><h1>Mental Health aWHEREness</h1>
