--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<a href="https://mentalhealthawhereness.com"><img src="https://mhaphmap.files.wordpress.com/2019/05/mhaphlogo-1.png" alt="Mental Health aWHEREness" style="width:50px; height:40px; border:0"></a><h1>Mental Health aWHEREness</h1>
 		</div>
 		<div id="controls">
-			<b>Click points for more information, or contribute data by adding points.</b> <input onclick="startEdits()" type="button" value="Click to Start Editing"> <input onclick="stopEdits()" type="button" value="Stop Your Editing Session"><br>
+			<b>Click pins for information on MH resources, or contribute data by adding points for the MH resources and facilities that you know (Visit mentalhealthawhereness.com for more information on how to contribute.</b> <input onclick="startEdits()" type="button" value="Click to Start Editing"> <input onclick="stopEdits()" type="button" value="Stop Your Editing Session"><br>
 		</div>
 		<div id="map"></div>
 		<div id="credits">
