--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<div id="wrapper">
 		<div id="header">
 			<a href="https://mentalhealthawhereness.com"><img src="https://mhaphmap.files.wordpress.com/2019/05/mhaphlogo-1.png" alt="Mental Health aWHEREness" style="width:50px; height:40px; border:0"></a><h1>Mental Health aWHEREness</h1>
-		        <h2>Click pins for information on MH resources, or contribute data by adding points for the MH resources and facilities that you know (Visit mentalhealthawhereness.com for more information on how to contribute.)</h2>	 	
+		        <h2>Click pins for information on MH resources, or contribute data by adding points for the MH resources and facilities that you know <p>Visit the <a href="https://mentalhealthawhereness.com">Mental Health aWHEREness</a> website for more information on how to contribute.</h2>	 	
 		</div>
 		<div id="controls">
 			<input onclick="startEdits()" type="button" value="Click to Start Editing"> <input onclick="stopEdits()" type="button" value="Stop Your Editing Session"><br>
