--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 	                    newData.properties.name = fname.value;
 	                    newData.properties.doctor = doctor.value;
 	                    newData.properties.contactnum = contactnum.value;
-	                    newData.properties.contactnum = email.value;			      
+	                    newData.properties.email = email.value;			      
 	                    newData.properties.fee = fee.value;
 	                    newData.properties.website = website.value;
 	                    newData.properties.hours = hours.value;
