--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 	              drawnItems.eachLayer(function (layer) {
 	                  var drawing = "'" + JSON.stringify(layer.toGeoJSON().geometry) + "'",   //Converts the drawing to a GeoJSON
 	                      sql = "SELECT insert_data('" + user_input +"');"; //Constructs the SQL Query from the entered parameters on the dialog/form
-			      sanitized_input = user_input.replace("'", "''")
+			      sanitized_input = user_input.replace("'", "''");
 			      
 	                  sql += drawing;
 	                  sql += "," + enteredAddress;
