--- a/index.html
+++ b/index.html
@@ -185,14 +185,14 @@
 	              setData();
 	          });
 	          function setData() {
-	              var enteredFname = "'" + fname.replace("'", "''")
-	                  enteredAddress = "'" + address.replace("'", "''")
-	                  enteredDoctor = "'" + doctor.replace("'", "''")
-	                  enteredContactnum = "'" + contactnum.replace("'", "''")
-	                  enteredEmail = "'" + email.replace("'", "''")		  
-	                  enteredFee = "'" + fee.replace("'", "''")
-	                  enteredWebsite = "'" + website.replace("'", "''")
-	                  enteredHours = "'" + hours.replace("'", "''")
+	              var enteredFname = "'" + fname.replace("'", "''"),
+	                  enteredAddress = "'" + address.replace("'", "''"),
+	                  enteredDoctor = "'" + doctor.replace("'", "''"),
+	                  enteredContactnum = "'" + contactnum.replace("'", "''"),
+	                  enteredEmail = "'" + email.replace("'", "''"),		  
+	                  enteredFee = "'" + fee.replace("'", "''"),
+	                  enteredWebsite = "'" + website.replace("'", "''"),
+	                  enteredHours = "'" + hours.replace("'", "''"),
 	                  enteredNotes = "'" + notes.replace("'", "''");        
 	              drawnItems.eachLayer(function (layer) {
 	                  var drawing = "'" + JSON.stringify(layer.toGeoJSON().geometry) + "'",   //Converts the drawing to a GeoJSON
