--- a/index.html
+++ b/index.html
@@ -185,15 +185,26 @@
 	              setData();
 	          });
 	          function setData() {
-	              var enteredFname = "'" + fname.value + "'",
-	                  enteredAddress = "'" + address.value + "'",
-	                  enteredDoctor = "'" + doctor.value + "'",
-	                  enteredContactnum = "'" + contactnum.value + "'",
-	                  enteredEmail = "'" + email.value + "'",	  
-	                  enteredFee = "'" + fee.value + "'",
-	                  enteredWebsite = "'" + website.value + "'",
-	                  enteredHours = "'" + hours.value + "'",
-	                  enteredNotes = "'" + notes.value + "'";        
+	              var userFname = "'" + fname.value + "'",
+	                  userAddress = "'" + address.value + "'",
+	                  userDoctor = "'" + doctor.value + "'",
+	                  userContactnum = "'" + contactnum.value + "'",
+	                  userEmail = "'" + email.value + "'",	  
+	                  userFee = "'" + fee.value + "'",
+	                  userWebsite = "'" + website.value + "'",
+	                  userHours = "'" + hours.value + "'",
+	                  userNotes = "'" + notes.value + "'";
+			  
+	              var enteredFname = userFname.replace("'", "''"),
+			  enteredAddress = userAddress.replace("'", "''"),
+			  enteredDoctor = userDoctor.replace("'", "''"),
+			  enteredContactnum = userContactnum.replace("'", "''"),
+			  enteredEmail = userEmail.replace("'", "''"),
+			  enteredFee = userFee.replace("'", "''"),
+			  enteredWebsite = userWebsite.replace("'", "''"),
+			  enteredHours = userHours.replace("'", "''"),
+			  enteredNotes = userNotes.replace("'", "''");  			  
+			  
 	              drawnItems.eachLayer(function (layer) {
 	                  var drawing = "'" + JSON.stringify(layer.toGeoJSON().geometry) + "'",   //Converts the drawing to a GeoJSON
 	                      sql = "SELECT " + config.cartoInsertFunction + "(";
