--- a/index.html
+++ b/index.html
@@ -185,24 +185,24 @@
 	              setData();
 	          });
 	          function setData() {
-	              var userFname = "'" + fname.value + "'",
-	                  userAddress = "'" + address.value + "'",
-	                  userDoctor = "'" + doctor.value + "'",
-	                  userContactnum = "'" + contactnum.value + "'",
-	                  userEmail = "'" + email.value + "'",	  
-	                  userFee = "'" + fee.value + "'",
-	                  userWebsite = "'" + website.value + "'",
-	                  userHours = "'" + hours.value + "'",
-	                  userNotes = "'" + notes.value + "'";
+	              var userFname = "'" + fname.value, 
+	                  userAddress = "'" + address.value,
+	                  userDoctor = "'" + doctor.value,
+	                  userContactnum = "'" + contactnum.value,
+	                  userEmail = "'" + email.value, 
+	                  userFee = "'" + fee.value,
+	                  userWebsite = "'" + website.value,
+	                  userHours = "'" + hours.value,
+	                  userNotes = "'" + notes.value;
 			  
-	              var enteredFname = userFname.replace("'", "''"),
-			  enteredAddress = userAddress.replace("'", "''"),
-			  enteredDoctor = userDoctor.replace("'", "''"),
-			  enteredContactnum = userContactnum.replace("'", "''"),
-			  enteredEmail = userEmail.replace("'", "''"),
-			  enteredFee = userFee.replace("'", "''"),
-			  enteredWebsite = userWebsite.replace("'", "''"),
-			  enteredHours = userHours.replace("'", "''"),
+	              var enteredFname = userFname.replace("'", "' '") + "'",
+			  enteredAddress = userAddress.replace("'", "''") + "'",
+			  enteredDoctor = userDoctor.replace("'", "''") + "'",
+			  enteredContactnum = userContactnum.replace("'", "''") + "'",
+			  enteredEmail = userEmail.replace("'", "''") + "'",
+			  enteredFee = userFee.replace("'", "''") + "'",
+			  enteredWebsite = userWebsite.replace("'", "''") + "'",
+			  enteredHours = userHours.replace("'", "''") + "'",
 			  enteredNotes = userNotes.replace("'", "''");  			  
 			  
 	              drawnItems.eachLayer(function (layer) {
