--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		        <h2>Click pins for information on MH resources, or contribute data by adding points for the MH resources and facilities that you know. <br>Visit the <a href="https://mentalhealthawhereness.com">Mental Health aWHEREness</a> website for more information on how to contribute.</h2>	 	
 		</div>
 		<div id="controls">
-			<input onclick="startEdits()" type="button" value="Click to Start Editing"> <input onclick="stopEdits()" type="button" value="Stop Your Editing Session"><br>
+			<input onclick="startEdits()" type="button" value="Click to Start Editing"> <input onclick="stopEdits()" type="button" value="Stop Your Editing Session"><br> NOTE: Please DO NOT use words with quotation marks. (e.g. I'm), or use '' instead. (e.g. I''m")
 		</div>
 		<div id="map"></div>
 		<div id="credits">
